add permissions only to facebook url

--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
             "js": ["content.js"]
         }
     ],
+    "permissions": ["https://www.facebook.com/*"],
     "background": {
         "scripts": ["background.js"]
     },
